Add project for handling redirect failures
Signed-off-by: Toke Høiland-Jørgensen <toke@redhat.com>

--- a/areas/drivers.org
+++ b/areas/drivers.org
@@ -19,6 +19,7 @@ parts of REDIRECT support. Based on this we can make a plan for what to do about
 each of these.
 
 ** TODO What to do about failing REDIRECT
+[[id:760b03fc-2a8e-499c-a90c-74dbc4716cbc][Handling XDP_REDIRECT failures]]
 
 ** TODO Queueing
 
