BTF considerations for 'Split packet parsing' assignments
Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/areas/xdp-tutorial.org
+++ b/areas/xdp-tutorial.org
@@ -47,6 +47,8 @@ info from metadata area, and act on parse-info, e.g. show it can read part
 of the packet, without doing parsing. The tricky part of the second XDP-prog
 is how can the verifiers static analysis proof safety.
 
+As part of the assignment, it would be relevant to use BTF for giving the
+metadata area structure.
 
 *** TODO xdp-tutorial: Extend to HW-offload: Split packet parsing between two XDP programs
 
@@ -57,6 +59,8 @@ XDP driver hook.
 
 This will demonstrate howto HW-offload packet header parse information via
 metadata area.
+
+BTF considerations, how can we transfer BTF info from HW-offloaded XDP-prog?
 
 
 * TODO xdp-tutorial for tracepoints project
